# llp-lab3

./: .gitignore  CMakeLists.txt  README.md  bank.csv  country.csv  create_banks  create_countries  create_edges  neo4j.py  query_example.json  query_schema.json  report.docx  response_schema.json
client/: CMakeLists.txt
client/gremlin_parser/: CMakeLists.txt
client/gremlin_parser/include/gremlin_parser/api/: ast_api.h
client/gremlin_parser/include/gremlin_parser/ast/: ast.h
client/gremlin_parser/include/gremlin_parser/lexer/: lexer.h
client/gremlin_parser/include/gremlin_parser/parser/: parser.h  parser_res.h
client/gremlin_parser/lexer/: gremlin.l
client/gremlin_parser/parser/: gremlin.y
client/gremlin_parser/src/api/: ast_api.c
client/gremlin_parser/src/ast/: ast.c
client/gremlin_parser/src/lexer/: lexer.c
client/gremlin_parser/src/parser/: parser.c  parser_res.c
client/include/: client.hpp  gremlin_ast_to_json.hpp  json_to_response.hpp  response.hpp
client/src/: client.cpp  gremlin_ast_to_json.cpp  json_to_response.cpp  main.cpp  response.cpp
server/: CMakeLists.txt
server/database/: CMakeLists.txt
server/database/include/database/: common_types.h
server/database/include/database/api/: element.h  element_storage_api.h  error_code.h  schema.h  storage_iterator_api.h
server/database/include/database/internal/: element_storage.h  internal_element.h  internal_element_type.h  internal_link.h  internal_link_type.h  list_construct.h  storage_iterator.h
server/database/include/database/list/: offset_list.h  offset_list_extended_interface.h  offset_list_interface.h  offset_list_iterator.h  offset_list_iterator_interface.h
server/database/include/database/memory_management/: page.h
server/database/include/database/memory_management/allocator/: offset_element_allocator.h  offset_element_allocator_interface.h  offset_empty_allocator_interface.h  offset_fixed_base_allocator.h  offset_fixed_base_allocator_interface.h  offset_fixed_element_allocator.h  offset_fixed_element_allocator_interface.h  offset_freelist_allocator.h  offset_freelist_allocator_interface.h  offset_page_allocator.h  offset_page_allocator_interface.h
server/database/include/database/memory_management/file/: offset_element_io.h  offset_element_io_interface.h  offset_memory_manager.h  offset_memory_manager_extended_interface.h  offset_memory_manager_interface.h  offset_unix_file_manager_interface.h  offset_windows_file_manager_interface.h
server/database/include/database/query/: query.h  query_processor.h
server/database/src/api/: element.c  element_storage_api.c  schema.c  storage_iterator.c
server/database/src/internal/: element_storage.c  internal_element.c  internal_element_type.c  internal_link_type.c  list_construct.c
server/database/src/list/: offset_list.c  offset_list_iterator.c
server/database/src/memory_management/allocator/: offset_element_allocator.c  offset_empty_allocator.c  offset_fixed_base_allocator.c  offset_fixed_element_allocator.c  offset_freelist_allocator.c  offset_page_allocator.c
server/database/src/memory_management/file/: offset_element_io.c  offset_memory_manager.c  offset_unix_file_manager.c  offset_windows_file_manager.c
server/database/src/query/: query_processor.c
server/include/: json_to_database_query.hpp  result_to_json.hpp  server.hpp  storage_adapter.hpp
server/src/: json_to_database_query.cpp  main.cpp  result_to_json.cpp  server.cpp  storage_adapter.cpp
share/: CMakeLists.txt
share/include/: attribute.h  tcp_socket.hpp  validate.hpp
share/src/: unix_tcp_socket.cpp  validate.cpp  windows_tcp_socket.cpp
